--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon --exec babel-node server.js",
+    "prod": "babel-watch server.js"
+
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/node": "^7.16.8",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "babel-node": "^0.0.1-security",
+    "babel-watch": "^7.7.0",
     "nodemon": "^2.0.15"
   }
 }
