--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.3"
+    "mongoose": "^6.2.3",
+    "nanoid": "^3.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
