--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.3",
-    "nanoid": "^3.3.1"
+    "nanoid": "^3.3.1",
+    "vcards-js": "^2.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
