--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@babel/node": "^7.16.8",
+    "aws-sdk": "^2.1094.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.3",
     "nanoid": "^3.3.1",
+    "qrcode": "^1.5.0",
     "vcards-js": "^2.10.0"
   },
   "devDependencies": {
